<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.shaddaystore_mobileapp_client.activity.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_mis_compras"
        android:name="com.shaddaystore_mobileapp_client.activity.ui.compras.MisComprasFragment"
        android:label="@string/menu_mis_compras"
        tools:layout="@layout/fragment_mis_compras" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.shaddaystore_mobileapp_client.activity.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_editar_perfil"
        tools:layout="@layout/fragment_configuracion" />

    <fragment
        android:id="@+id/nav_productos"
        android:name="com.shaddaystore_mobileapp_client.activity.ProductosCarritoActivity"
        android:label="@string/menu_productos"
        tools:layout="@layout/activity_productos_carrito" />

    <fragment
        android:id="@+id/nav_categorias"
        android:name="com.shaddaystore_mobileapp_client.activity.ListarProductosPorCategoriaActivity"
        android:label="@string/menu_categorias"
        tools:layout="@layout/activity_listar_productos_por_categoria" />

</navigation>